# rfpkog

./: CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
man/: rfpkog.1.md
src/: cl_headers.hpp  dtype.hpp  heat_kernel.cl  heat_kernel.hpp  kernel.hpp  kernels.cl  main.cpp  misc.cpp  misc.hpp  options.cpp  options.hpp  pd.hpp  pwgk.hpp  rfpkog.hpp
tests/: generate.py  gudhi-reference.py  persistence_diagram.py
